// Copyright 2023 The Bucketeer Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package bucketeer.notification;
option go_package = "github.com/bucketeer-io/bucketeer/proto/notification";

import "proto/notification/subscription.proto";
import "proto/notification/recipient.proto";

message CreateAdminSubscriptionCommand {
  repeated Subscription.SourceType source_types = 1;
  Recipient recipient = 2;
  string name = 3;
}

message AddAdminSubscriptionSourceTypesCommand {
  repeated Subscription.SourceType source_types = 1;
}

message DeleteAdminSubscriptionSourceTypesCommand {
  repeated Subscription.SourceType source_types = 1;
}

message EnableAdminSubscriptionCommand {}

message DisableAdminSubscriptionCommand {}

message DeleteAdminSubscriptionCommand {}

message RenameAdminSubscriptionCommand {
  string name = 1;
}

message CreateSubscriptionCommand {
  repeated Subscription.SourceType source_types = 1;
  Recipient recipient = 2;
  string name = 3;
}

message AddSourceTypesCommand {
  repeated Subscription.SourceType source_types = 1;
}

message DeleteSourceTypesCommand {
  repeated Subscription.SourceType source_types = 1;
}

message EnableSubscriptionCommand {}

message DisableSubscriptionCommand {}

message DeleteSubscriptionCommand {}

message RenameSubscriptionCommand {
  string name = 1;
}